added json file for all restaurants

--- a/html/order.html
+++ b/html/order.html
@@ -67,7 +67,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
               </svg>              
         </div>
-</div>
+    </div>
         
         <div class="price-options">
             <ul>
@@ -86,6 +86,6 @@
             </ul>
         </div>
     </div>
-    <script src="../js/order.js"></script>
+    <script type="module" src="../js/order.js"></script>
 </body>
 </html>
