--- a/html/index.html
+++ b/html/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>penguin delivery</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="header-container">
-        <div class="welcome">ברוך הבא, איליה</div>
-        <h1 class="title">VERY LONG TITLE</h1>
-        <div class="address">הרא"ה 8, רמת גן</div>
+        <a href="" class="logo">My logo</a>
+        <ul class="header-tabs">
+            <li>Welcome back, name</li>
+            <li><a href="order.html">Order Now</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li>your address here</li>
+        </ul>
+            <i class="fa fa-navicon"></i>
     </header>
 
     <div class="main-container">
-
-        <div class="img-container">
-            <img class="penguin-img" src="../images/Blue_penguin_jumping.PNG" alt="blue penguin">
-        </div>
-        
         <div class="nav-container">
             <ul>
-                <li><a href="order.html">Order now</a></li>
-                <li><a href="index.html">main page</a></li>
+                
                 <li><a href="#contact">option3</a></li>
                 <li><a href="#about">option4</a></li>
             </ul>
