finished restaurants picker design, beside filtering

--- a/html/order.html
+++ b/html/order.html
@@ -40,7 +40,7 @@
                 <a href="#">Fast Food</a>
             </li>
             <li>
-                <a href="#">Fast Food</a>
+                <a href="#">Bar</a>
             </li>
             <li>
                 <a href="#">Fast Food</a>
@@ -68,7 +68,6 @@
               </svg>              
         </div>
     </div>
-        
         <div class="price-options">
             <ul>
                 <li>
@@ -84,6 +83,9 @@
                     <a href="#">$$$$</a>
                 </li>
             </ul>
+        </div>
+        <div class="card-container" id="card-container">
+            <ul id="card-list"></ul>
         </div>
     </div>
     <script type="module" src="../js/order.js"></script>
