almost finished filtering, only by city is left

--- a/html/order.html
+++ b/html/order.html
@@ -28,7 +28,10 @@
             </div>
         <ul>
             <li>
-                <a href="#" class="active">Italian</a>
+                <a href="#" class="active">All</a>
+            </li>
+            <li>
+                <a href="#">Italian</a>
             </li>
             <li>
                 <a href="#">Asian</a>
@@ -37,28 +40,19 @@
                 <a href="#">Mexican</a>
             </li>
             <li>
-                <a href="#">Fast Food</a>
+                <a href="#">Fast food</a>
             </li>
             <li>
                 <a href="#">Bar</a>
             </li>
             <li>
-                <a href="#">Fast Food</a>
+                <a href="#">Seafood</a>
             </li>
             <li>
-                <a href="#">Fast Food</a>
+                <a href="#">Israeli</a>
             </li>
             <li>
-                <a href="#">Mexican</a>
-            </li>
-            <li>
-                <a href="#">Fast Food</a>
-            </li>
-            <li>
-                <a href="#">Fast Food</a>
-            </li>
-            <li>
-                <a href="#">Fast Food</a>
+                <a href="#">Desserts</a>
             </li>
         </ul>
             
@@ -71,7 +65,10 @@
         <div class="price-options">
             <ul>
                 <li>
-                    <a href="#" class="active">$</a>
+                    <a href="#" class="active">All</a>
+                </li>    
+                <li>
+                    <a href="#">$</a>
                 </li>
                 <li>
                     <a href="#">$$</a>
