--- a/html/index.html
+++ b/html/index.html
@@ -8,25 +8,18 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="header-container">
-        <a href="" class="logo">My logo</a>
-        <ul class="header-tabs">
-            <li>Welcome back, name</li>
-            <li><a href="order.html">Order Now</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li>your address here</li>
-        </ul>
-            <i class="fa fa-navicon"></i>
+    <header class="header-container" id="top-nav">
+        <a href="javascript:void(0);    " class="logo">My logo</a>
+        <a href="javascript:void(0);">Welcome back, ilia</a>
+        <a href="order.html">Order Now</a>
+        <a href="about.html">About Us</a>
+        <a href="javascript:void(0);">Alenbi st. 7, Tel aviv</a>
+        <a href="javascript:void(0);" class="icon" id="icon"><i class="fa fa-navicon"></i></a>
     </header>
 
     <div class="main-container">
-        <div class="nav-container">
-            <ul>
-                
-                <li><a href="#contact">option3</a></li>
-                <li><a href="#about">option4</a></li>
-            </ul>
-        </div>
+        <h1>Unlimited food posibilities just for you</h1>
     </div>
+    <script type="module" src="../js/index.js"></script>
 </body>
 </html>
