--- a/html/order.html
+++ b/html/order.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/orders.css">
 </head>
 <body>
-    <header class="header-container">
-        <div class="welcome">ברוך הבא, איליה</div>
-        <h1 class="title">VERY LONG TITLE</h1>
-        <div class="address">הרא"ה 8, רמת גן</div>
+    <header class="header-container" id="top-nav">
+        <a href="javascript:void(0);    " class="logo">My logo</a>
+        <a href="javascript:void(0);">Welcome back, ilia</a>
+        <a href="order.html">Order Now</a>
+        <a href="about.html">About Us</a>
+        <a href="javascript:void(0);">Alenbi st. 7, Tel aviv</a>
+        <a href="javascript:void(0);" class="icon" id="icon"><i class="fa fa-navicon"></i></a>
     </header>
     
     <div class="order-container">
