--- a/html/order.html
+++ b/html/order.html
@@ -89,6 +89,6 @@
             <ul id="card-list"></ul>
         </div>
     </div>
-    <script type="module" src="../js/order.js"></script>
+    <script type="module" src="../js/order.js" defer></script>
 </body>
 </html>
