--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header-container" id="top-nav">
-        <a href="javascript:void(0);    " class="logo">My logo</a>
+        <a href="javascript:void(0);" class="logo"><img src="../images/488penguin2_100230.png" alt=""></a>
         <a href="javascript:void(0);">Welcome back, ilia</a>
         <a href="order.html">Order Now</a>
         <a href="about.html">About Us</a>
