started work on order popup

--- a/html/order.html
+++ b/html/order.html
@@ -88,6 +88,9 @@
         <div class="card-container" id="card-container">
             <ul id="card-list"></ul>
         </div>
+        <div class="your-order" id="your-order">
+            See your order
+        </div>
     </div>
     <script type="module" src="../js/order.js" defer></script>
 </body>
