upgraded order pop up

--- a/html/order.html
+++ b/html/order.html
@@ -89,8 +89,8 @@
             <ul id="card-list"></ul>
         </div>
         <div class="your-order" id="your-order">
-            See your order
-            <ul></ul>
+            <p id="order-window-text">See your order</p>
+            <ul id="ordered-items"></ul>
         </div>
     </div>
     <script type="module" src="../js/order.js" defer></script>
