--- a/html/order.html
+++ b/html/order.html
@@ -90,7 +90,11 @@
         </div>
         <div class="your-order" id="your-order">
             <p id="order-window-text">See your order</p>
-            <ul id="ordered-items"></ul>
+            <ul id="ordered-items">
+                <div class="checkout card hide">
+                    <button>To Checkout</button>
+                </div>
+            </ul>
         </div>
     </div>
     <script type="module" src="../js/order.js" defer></script>
